# sem3_Lab2

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: build.yml
Gtests/: CMakeLists.txt  IPTests.cpp
Tasks/: IpTask.cpp  IpTask.h
